# Speed-Titans

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
Libs/: Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h  Sounds.cpp  Sounds.h  skybox.cpp  skybox.h
Libs/imgui/backends/: imgui_impl_opengl3.cpp
Modelos/auto/: scene.gltf
Modelos/bee/: scene.gltf
Modelos/ciudad/: scene.gltf
Modelos/jeep/: license.txt  scene.gltf
Modelos/meteoro/: license.txt  scene.gltf
Modelos/mitsubishi/: scene.gltf
Modelos/traffic/: license.txt  scene.gltf
shaders/: model.frag  model.vert  skybox.vert
